app component fix backgroud overflow

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -4,6 +4,7 @@
     background: linear-gradient(90deg,#0752D1, #168AAF );
         margin: 0;
         padding: 0;
+        overflow-x: hidden;
 }
 header{
     margin-bottom: 10vh;
